Add Siteman cancer flyer to homepage.

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -5,6 +5,13 @@
   </div>
 </div>
 
+<div class="container jumbotron text-align:center">
+  <div class="container">
+    <h2><strong>Upcoming (4/25/2015):</strong> Siteman Cancer Screenings</h2>
+    <p>Join the Siteman Cancer Center for free pap smears, breast cancer screenings, and other general health screenings (including blood glucose, cholesterol, and HIV) on Saturday, April 25, from 8 am to 1:30 pm. For more information on services, timing, and location, see the <a href="https://drive.google.com/file/d/0Bz1QXY4bzZkkaW9aY0JSd0Q0MlU/view?usp=sharing">flyer</a>.</p>
+  </div>
+</div>
+
 <div class="container marketing" style="padding:75px">
   <div class="row">
     <div class="col-lg-4">
