--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -21,9 +21,14 @@
 -->
 
 <div class="container">
-  <h1>Upcoming Availiable Dates</h1>
+  <div class="fluid-container col-lg-9"><h1>Upcoming Availiable Dates</h1></div>
+  <div class="btn-group">
+    <input ng-model="clinfilter" value="preclinical" type="radio">Preclinical</input></br>
+    <input ng-model="clinfilter" value="clinical" type="radio">Clinical</input></br>
+    <input ng-model="clinfilter" value="attending" type="radio">Attending</input></br>
+  </div>
   <table class="table table-striped" ng-controller="CalCtrl" >
-    <tr ng-repeat="event in cal_events | limitTo:5" ng-controller="FirebaseCtrl" >
+    <tr ng-repeat="event in cal_events | limitTo:5" ng-controller="FirebaseCtrl" ng-show="open(clinfilter)" >
       <td> <strong>{{event.title}}</strong> ({{event.id}})</td>
       <td> {{ event.start | date:"MMMM d, y h:mm" }} - {{event.end | date: "h:mm a"}} </td>
       <td> <form ng-submit="volunteer(event)"> <button type="submit">Volunteer</button> </form> </td>
