--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -32,7 +32,7 @@
     <tr ng-repeat="event in cal_events | limitTo:5" ng-controller="FirebaseCtrl" ng-show="open(clinfilter)" >
       <td> <strong>{{event.title}}</strong> ({{event.id}})</td>
       <td> {{ event.start | date:"MMMM d, y h:mm" }} - {{event.end | date: "h:mm a"}} </td>
-      <td> <form ng-submit="volunteer(event)"> <button type="submit">Volunteer</button> </form> </td>
+      <td> <form ng-submit="volunteer(clinfilter)"> <button type="submit">Volunteer</button> </form> </td>
     </tr>
   </table>
   {{fb_events}}
