--- a/app/partials/partners.html
+++ b/app/partials/partners.html
@@ -6,26 +6,27 @@
   </div>
 </div>
 
-<div id="mc_embed_signup">
+<div class="container">
 	<form action="//wustl.us10.list-manage.com/subscribe/post?u=21adee5d0c43b4e0c7098526e&amp;id=3176d97149" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <div id="mc_embed_signup_scroll">
 		<h2>Subscribe to our weekly e-mails!</h2>
-			<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-			<div class="mc-field-group">
+		<p>Every Monday, the SNHC sends out an e-mail with our most up-to-date schedule for Saturday and Specialty Clinics, as well as other important SNHC news. Sign up below if you or your organization is interested!</p>
+		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+			<div class="form-group col-md-6">
 				<label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
-				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+				<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL">
 			</div>
-			<div class="mc-field-group">
+			<div class="form-group col-md-6">
 				<label for="mce-MMERGE3">Organization<span class="asterisk">*</span></label>
-				<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3">
+				<input type="text" value="" name="MMERGE3" class="form-control" id="mce-MMERGE3">
 			</div>
-			<div class="mc-field-group">
+			<div class="form-group col-md-6">
 				<label for="mce-FNAME">First Name</label>
-				<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+				<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
 			</div>
-			<div class="mc-field-group">
+			<div class="form-group col-md-6">
 				<label for="mce-LNAME">Last Name </label>
-				<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+				<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME">
 			</div>
 			<p><a href="http://us10.campaign-archive1.com/home/?u=21adee5d0c43b4e0c7098526e&id=3176d97149" title="View previous campaigns">View previous campaigns.</a></p>
 			<div id="mce-responses" class="clear">
@@ -33,7 +34,7 @@
 				<div class="response" id="mce-success-response" style="display:none"></div>
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    <div style="position: absolute; left: -5000px;"><input type="text" name="b_21adee5d0c43b4e0c7098526e_3176d97149" tabindex="-1" value=""></div>
-		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default"></div>
 	    </div>
 	</form>
 </div>
