--- a/app/partials/partners.html
+++ b/app/partials/partners.html
@@ -7,6 +7,28 @@
 </div>
 
 <div class="container">
+	<form name="MailchimpSubscriptionForm" ng-controller="MailchimpCtrl" ng-class="{success: mailchimp.result === 'success'}">
+		<div ng-hide="mailchimp.result === 'success'" class="form-container">
+			<input class="hidden" type="hidden" ng-model="mailchimp.username" ng-init="mailchimp.username='wustl'">
+			<input class="hidden" type="hidden" ng-model="mailchimp.dc" ng-init="mailchimp.dc='us10'">
+			<input class="hidden" type="hidden" ng-model="mailchimp.u" ng-init="mailchimp.u='21adee5d0c43b4e0c7098526e'">
+			<input class="hidden" type="hidden" ng-model="mailchimp.id" ng-init="mailchimp.id='3176d97149'">
+			<h1>Get notified when we launch our app.</h1>
+			<!-- Show error message if MailChimp unsuccessfully added the email to the list. -->
+			<div ng-show="mailchimp.result === 'error'" ng-cloak>
+			<p ng-bind-html="mailchimp.errorMessage" class="error"></p>
+			</div>
+			<input class="form-control" type="email" name="email" ng-model="mailchimp.email" placeholder="Enter your email address" required>
+			<input class="btn btn-lg" ng-disabled="MailchimpSubscriptionForm.$invalid" ng-click="addSubscription(mailchimp)" type="submit" value="SUBSCRIBE">
+			</div>
+			<!-- Show success message if MailChimp successfully added email to the list. -->
+			<div ng-show="mailchimp.result === 'success'" class="result-message" ng-cloak>
+			<h2>{{mailchimp.successMessage}}</h2>
+		</div>
+	</form>
+</div>
+
+<div class="container">
 	<form action="//wustl.us10.list-manage.com/subscribe/post?u=21adee5d0c43b4e0c7098526e&amp;id=3176d97149" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <div id="mc_embed_signup_scroll">
 		<h2>Subscribe to our weekly e-mails!</h2>
@@ -38,5 +60,4 @@
 	    </div>
 	</form>
 </div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='text';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
