--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -5,28 +5,12 @@
   </div>
 </div>
 
-<!--
-<div class="container">  
-  <h2>Sign Up</h2>
-  <ol> 
-    <li> Log in to <a href="https://snhc.wusm.wustl.edu/">SharePoint</a> using "medpriv\" + your Medportal username
-      <ol type="a" >
-	<li> You <u>must</u> use backslash = "\", not "/" </li>
-	<li> Example: For student Jane Smith, type <b>medpriv\smithj</b> </li>
-      </ol>
-    <li> <u>Mouse over</u> dates (in the left column) to view sign-up slots. </li>
-    <li> Click on a date to view the entry for that day in more detail. <u>This will allow you to see the <strong>coordinator's email</strong> and <b>volunteers' phone numbers</b>, which are not visible on the main page due to space limitations.</u></li>
-    <li>Click "<b>Edit Form</b>" <font color="red">(<b><u>NOT</u></b> <del>"New Item"</del>)</font> to type in your info on the sign-up form.<li>  
-</div>
--->
-
-<div class="container">
+<div class="container" ng-init="clinfilter='preclinical'">
   <div class="fluid-container col-lg-9"><h1>Upcoming Availiable Dates</h1></div>
   <div class="btn-group col-lg-3">
     <input ng-model="clinfilter" value="preclinical" type="radio">Preclinical</input></br>
     <input ng-model="clinfilter" value="clinical" type="radio">Clinical</input></br>
     <input ng-model="clinfilter" value="attending" type="radio">Attending</input></br>
-    <input ng-model="clinfilter" value="ALL" type="radio">Show All</input></br>
   </div>
   <table class="table table-striped" ng-controller="CalCtrl" >
     <tr ng-repeat="event in cal_events | limitTo:5" ng-controller="FirebaseCtrl" ng-show="open(clinfilter)" >
@@ -35,5 +19,4 @@
       <td> <form ng-submit="volunteer(clinfilter)"> <button type="submit">Volunteer</button> </form> </td>
     </tr>
   </table>
-  {{fb_events}}
 </div>
