--- a/app/partials/partners.html
+++ b/app/partials/partners.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container col-md-7">
 	<form action="//wustl.us10.list-manage.com/subscribe/post?u=21adee5d0c43b4e0c7098526e&amp;id=3176d97149" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <div id="mc_embed_signup_scroll">
 			<h2>Subscribe to our weekly e-mails!</h2>
@@ -38,5 +38,8 @@
 		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default"></div>
 	    </div>
 	</form>
+</div>
+<div class="col-md-5">
+  <div class="fb-page" data-href="https://www.facebook.com/wusmsnhc?fref=ts" data-hide-cover="false" data-show-facepile="true" data-width=500 data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/wusmsnhc?fref=ts"><a href="https://www.facebook.com/wusmsnhc?fref=ts">Washington University Saturday Neighborhood Health Clinic</a></blockquote></div></div>
 </div>
 <!--End mc_embed_signup-->
