Add comment box to website.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -29,6 +29,7 @@
       	<strong>Contact our Board</strong><br>
 	      <a href="mailto:#">snhc@wusm.wustl.edu</a><br>
         <abbr title="Phone">P:</abbr> (314) 275-0657<br>
+        <a href="https://docs.google.com/forms/d/1Ivul2fh2dpvy6vH17Q3KAfPj5K0C0FDQbuIbjD-QbJU/viewform?usp=send_form">Submit a comment or question</a>
       </address>
     </div>
   </div>
