Add some stub text
it's pretty awesome

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -1,9 +1,13 @@
 <div class="jumbotron section-header" >
   <div class="container" >
     <h1>Resources</h1>
-    <p></p>
+    <p>Here be resources!</p>
   </div>
 </div>
 
 <div class="container">  
+<h1>Awesome stuff!</h1>
+<p>Here, let me explain all the awesome stuff!</p>
+<h1>Somewhat less awesome stuff</h1>
+<p>It's still useful, though!</p>
 </div>
