testing out my html-ing
does this even look normal? do i need all those <p>?

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -1,13 +1,18 @@
 <div class="jumbotron section-header" >
   <div class="container" >
     <h1>Resources</h1>
-    <p>Here be resources!</p>
   </div>
 </div>
 
 <div class="container">  
-<h1>Awesome stuff!</h1>
-<p>Here, let me explain all the awesome stuff!</p>
-<h1>Somewhat less awesome stuff</h1>
-<p>It's still useful, though!</p>
+<p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic! This page is currently under construction, so please check back later for a full list of community resources.</p>
+<h1>United Way/2-1-1 Helps</h1>
+<p>“If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here. Multilingual services are also available. Your phone call is confidential and free.”</p>
+<p>http://www.211helps.org/</p>
+<p>Or dial 211 or 1-800-427-4626
+</p>
+<h1>Affordable Healthcare Act (Obamacare)</h1>
+<p>www.Healthcare.gov</p>
+<p>800-318-2596
+</p>
 </div>
