--- a/app/partials/enespanol.html
+++ b/app/partials/enespanol.html
@@ -1,6 +1,6 @@
 <div class="jumbotron section-header" >
   <div class="container" >
-    <h1>Resources</h1>
+    <h1>En Español</h1>
     <p></p>
   </div>
 </div>
