beautifying resources page
adding tabs

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -14,6 +14,8 @@ Your phone call is confidential and free.”<br>
 1-800-427-4626<br>
 Or dial 211<br>
 </p>
+<br>
+<br><h3>Insurance Assistance</h3>
 <p><h4>Affordable Healthcare Act (Obamacare)</h4>
 <a href="//www.Healthcare.gov/">www.Healthcare.gov</a><br>
 800-318-2596
@@ -22,27 +24,36 @@ Or dial 211<br>
 Hotline for consumer questions and initiating the process of insurance. This website contains some extra information about the Affordable Care Act, so it might be useful to start here. <br>
 <a href="//www.enrollmissouri.org/">www.EnrollMissouri.org</a><br>
 800-318-2596<br></p>
+<p><h4>Medicaid</h4>
+Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
+<a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
+<br>
+<h3>Housing Resources</h3>
 <p><h4>Energy Care</h4>
 Energy-related services for the low-income, elderly, ill, disabled, and families with young children in St. Louis City and County.<br>
 <a href="//www.energycare.org/">www.EnergyCare.org</a><br>
 314-733-5900<br></p>
-<p><h4>Medicaid</h4>
-Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
-<a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
 <p><h4>Homeless Hotline: Housing Resource Center</h4>
 Access to homeless shelters and other housing programs (most facilities require a referral from the housing resource center; start calling at 8 AM if you are looking for a shelter for that night). <br>
 800 N. Tucker Blvd.<br>
 314-802-5444<br>
 Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory.org</a> - a website for shelters and resources in Missouri<br></p>
+<br>
+<h3>Other Resources</h3>
 <p><h4>American Red Cross - St. Louis Chapter</h4>
 <a href="//www.RedCrossStl.org/">www.RedCrossSTL.org</a><br>
 314-333-JOBS (5627)<br></p>
+<br>
+<h4>Catholic Charities</h4><br>
+<a href="//www.ccstl.org/">www.ccstl.org</a><br>
+800-318-2596<br>
+<br>
 <p><h4>Hotlines</h4>
-Call For Help - Metro East			618-397-0968<br>
+<pre>Call For Help - Metro East			618-397-0968<br>
 	Multi-service agency for crisis situations<br>
 Hunger Hotline 					314-726-5355<br>
 	Comprehensive list of food pantries in the St. Louis region<br>
-Mental Health Hotline				800-273-TALK (8255)<br></p>
+Mental Health Hotline				800-273-TALK (8255)</pre><br></p>
 <br>
 <p>For a comprehensive list of St. Louis community resources, please utilize the “Start Here Resource Directory,” compiled by Inside Dharma.<br>
 <a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">http://www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf</a>
