--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -6,6 +6,7 @@
 
 <div class="container">  
 <p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic! This page is currently under construction, so please check back later for a full list of community resources.</p>
+<br>
 <p><h4>United Way/2-1-1 Helps</h4>
 “If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here.
 Multilingual services are also available.
@@ -44,16 +45,19 @@ Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory
 <a href="//www.RedCrossStl.org/">www.RedCrossSTL.org</a><br>
 314-333-JOBS (5627)<br></p>
 <br>
-<h4>Catholic Charities</h4><br>
+<p><h4>Catholic Charities</h4>
 <a href="//www.ccstl.org/">www.ccstl.org</a><br>
-800-318-2596<br>
+800-318-2596<br></p>
 <br>
-<p><h4>Hotlines</h4>
-<pre>Call For Help - Metro East			618-397-0968<br>
-	Multi-service agency for crisis situations<br>
-Hunger Hotline 					314-726-5355<br>
-	Comprehensive list of food pantries in the St. Louis region<br>
-Mental Health Hotline				800-273-TALK (8255)</pre><br></p>
+<h4>National Alliance for Mental Health (NAMI)</h4>
+<a href="//www.nami.org/">www.NAMI.org</a><br>
+800-273-8255<br>
+<p><h3>Hotlines</h3>
+Call For Help - Metro East&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;618-397-0968<br>
+&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations<br>
+Hunger Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;314-726-5355<br>
+&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region<br>
+Mental Health Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;800-273-TALK (8255)<br></p>
 <br>
 <p>For a comprehensive list of St. Louis community resources, please utilize the “Start Here Resource Directory,” compiled by Inside Dharma.<br>
 <a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">http://www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf</a>
