alignments of hotlines

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -15,7 +15,6 @@ Your phone call is confidential and free.”<br>
 1-800-427-4626<br>
 Or dial 211<br>
 </p>
-<br>
 <br><h3>Insurance Assistance</h3>
 <p><h4>Affordable Healthcare Act (Obamacare)</h4>
 <a href="//www.Healthcare.gov/">www.Healthcare.gov</a><br>
@@ -44,19 +43,18 @@ Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory
 <p><h4>American Red Cross - St. Louis Chapter</h4>
 <a href="//www.RedCrossStl.org/">www.RedCrossSTL.org</a><br>
 314-333-JOBS (5627)<br></p>
-<br>
 <p><h4>Catholic Charities</h4>
 <a href="//www.ccstl.org/">www.ccstl.org</a><br>
 800-318-2596<br></p>
-<br>
 <h4>National Alliance for Mental Health (NAMI)</h4>
 <a href="//www.nami.org/">www.NAMI.org</a><br>
 800-273-8255<br>
+<br>
 <p><h3>Hotlines</h3>
 Call For Help - Metro East&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;618-397-0968<br>
-&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations<br>
-Hunger Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;314-726-5355<br>
-&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations<br>
+Hunger Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;314-726-5355<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region<br>
 Mental Health Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;800-273-TALK (8255)<br></p>
 <br>
 <p>For a comprehensive list of St. Louis community resources, please utilize the “Start Here Resource Directory,” compiled by Inside Dharma.<br>
