update page description

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -5,7 +5,8 @@
 </div>
 
 <div class="container">  
-<p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic! This page is currently under construction, so please check back later for a full list of community resources.</p>
+<p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic!<br>
+On this page, you will find websites and contact information for some community resources in the St. Louis region. This is only a subset of the many resources available to our patients; please see the "Start Here Resource Directory" (linked at the bottom of this page) for a more complete list of community organizations, hotlines, and more.</p>
 <br>
 <p><h4>United Way/2-1-1 Helps</h4>
 “If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here.
