--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -61,6 +61,30 @@ GED Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nb
 Women's Safe House&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;314-772-8952<br>
 Youth in Need Hotline&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;636-946-3771<br>
 </p><br>
+<br>
+<table>
+  <tr>
+    <td>Call for Help - Metro East</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations</td>
+    <td>Hunger Hotline</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region</td>
+    <td>Mental Health Hotline</td>
+    <td>GED Hotline</td>
+    <td>Women's Safe House</td>
+    <td>Youth in Need Hotline</td>
+  </tr>
+  <tr>
+    <td>618-397-0968</td>
+    <td> </td>
+    <td>314-726-5355</td>
+    <td> </td>
+    <td>800-273-TALK (8255)</td>
+    <td>800-626-9433</td>
+    <td>314-772-8952</td>
+    <td>636-946-3771</td>
+  </tr>
+</table>
+<br>
 <p>For a comprehensive list of St. Louis community resources, please utilize the “Start Here Resource Directory,” compiled by Inside Dharma.<br>
 <a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">http://www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf</a>
 </div>
