--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -29,6 +29,29 @@ Hotline for consumer questions and initiating the process of insurance. This web
 Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
 <a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
 <br>
+<h3>Federally Qualified Health Centers</h3>
+<h4>Family Care Health Centers</h4>
+<a href="//www.fchcstl.org/">www.fchcstl.org</a>
+<b>Carondelet Location</b><br>
+401 Holly Hills Avenue<br>
+(314) 353-5190<br>
+<b>Forest Park Southeast Location</bb<br>
+4352 Manchester Avenue<br>
+(314) 531-5444<br>
+<br>
+<h4>Affinia Healthcare</h4>
+(formerly Grace Hill Health Centers)<br>
+<a href="//affiniahealthcare.org/">www.AffiniaHealthcare.org</a>
+A number of locations across St. Louis<br>
+(314) 814-8700<br>
+<h4>Myrtle Hilliard Davis Comprehensive Health Centers</h4>
+<a href="//www.mhdchc.org/">www.mhdchc.org</a>
+Three locations in St. Louis<br>
+(314) 633-6363<br>
+<h4>Integrated Health Network - Provider Index</h4>
+For a comprehensive list of FQHCs in the St. Louis Region, please visit the Integrated Health Network's Index of Providers, which can be found <a href="//www.stlouisihn.org/index-of-providers">here</a>, or at the web address below.<br>
+http://www.stlouisihn.org/index-of-providers<br>
+<br>
 <h3>Housing Resources</h3>
 <p><h4>Energy Care</h4>
 Energy-related services for the low-income, elderly, ill, disabled, and families with young children in St. Louis City and County.<br>
