fixing formatting and adding FQHC description

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -29,23 +29,23 @@ Hotline for consumer questions and initiating the process of insurance. This web
 Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
 <a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
 <br>
-<h3>Federally Qualified Health Centers</h3>
+<h3>Federally Qualified Health Centers (FQHCs)</h3>
+Federally Qualified Health Centers are community-based organizations that provide comprehensive primary care and preventive care, including health, oral, and mental health/substance abuse services to persons of all ages, regardless of their ability to pay or health insurance status. FQHCs charge for services on a community board approved sliding-fee scale that is based on patients' family income and size.<br>
 <h4>Family Care Health Centers</h4>
-<a href="//www.fchcstl.org/">www.fchcstl.org</a>
+<a href="//www.fchcstl.org/">www.fchcstl.org</a><br>
 <b>Carondelet Location</b><br>
 401 Holly Hills Avenue<br>
 (314) 353-5190<br>
-<b>Forest Park Southeast Location</bb<br>
+<b>Forest Park Southeast Location</b><br>
 4352 Manchester Avenue<br>
 (314) 531-5444<br>
-<br>
 <h4>Affinia Healthcare</h4>
 (formerly Grace Hill Health Centers)<br>
-<a href="//affiniahealthcare.org/">www.AffiniaHealthcare.org</a>
+<a href="//affiniahealthcare.org/">www.AffiniaHealthcare.org</a><br>
 A number of locations across St. Louis<br>
 (314) 814-8700<br>
 <h4>Myrtle Hilliard Davis Comprehensive Health Centers</h4>
-<a href="//www.mhdchc.org/">www.mhdchc.org</a>
+<a href="//www.mhdchc.org/">www.mhdchc.org</a><br>
 Three locations in St. Louis<br>
 (314) 633-6363<br>
 <h4>Integrated Health Network - Provider Index</h4>
