fix broken respectacle link

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -64,9 +64,9 @@ Access to homeless shelters and other housing programs (most facilities require 
 Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory.org</a> - a website for shelters and resources in Missouri<br></p>
 <br>
 <h3>Medical Devices and Medication</h3>
-<p><h4>Free and Reduced Cost Glasses</h4>
-Have your prescription ready.<br>
-<a href=“//www.respectacle.org/“>www.respectacle.org<a/><br></p>
+<p><h4>Respectacle</h4>
+Free and reduced cost glasses. Have your prescription ready.<br>
+<a href=“//respectacle.org/“>www.respectacle.org</a><br></p>
 <br>
 <h3>Other Resources</h3>
 <p><h4>American Red Cross - St. Louis Chapter</h4>
