--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -66,7 +66,7 @@ Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory
 <h3>Medical Devices and Medication</h3>
 <p><h4>Respectacle</h4>
 Free and reduced cost glasses. Have your prescription ready.<br>
-<a href=“//respectacle.org/“>www.respectacle.org</a><br></p>
+<a href=“//www.respectacle.org/“>www.respectacle.org</a><br></p>
 <br>
 <h3>Other Resources</h3>
 <p><h4>American Red Cross - St. Louis Chapter</h4>
