--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -5,118 +5,144 @@
 </div>
 
 <div class="container">  
-<p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic!<br>
-On this page, you will find websites and contact information for some community resources in the St. Louis region. This is only a subset of the many resources available to our patients; please see the "Start Here Resource Directory" (linked at the bottom of this page) for a more complete list of community organizations, hotlines, and more.</p>
-<br>
-<p><h4>United Way/2-1-1 Helps</h4>
-“If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here.
-Multilingual services are also available.
-Your phone call is confidential and free.”<br>
-<a href="//www.211helps.org/">http://www.211helps.org</a><br>
-1-800-427-4626<br>
-Or dial 211<br>
-</p>
-<br><h3>Insurance Assistance</h3>
-<p><h4>Affordable Healthcare Act (Obamacare)</h4>
-<a href="//www.Healthcare.gov/">www.Healthcare.gov</a><br>
-800-318-2596
-</p>
-<p><h4>Missouri Healthcare Marketplace</h4>
-Hotline for consumer questions and initiating the process of insurance. This website contains some extra information about the Affordable Care Act, so it might be useful to start here. <br>
-<a href="//www.enrollmissouri.org/">www.EnrollMissouri.org</a><br>
-800-318-2596<br></p>
-<p><h4>Medicaid</h4>
-Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
-<a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
-<br>
-<h3>Federally Qualified Health Centers (FQHCs)</h3>
-Federally Qualified Health Centers are community-based organizations that provide comprehensive primary care and preventive care, including health, oral, and mental health/substance abuse services to persons of all ages, regardless of their ability to pay or health insurance status. FQHCs charge for services on a community board approved sliding-fee scale that is based on patients' family income and size.<br>
-<h4>Family Care Health Centers</h4>
-<a href="//www.fchcstl.org/">www.fchcstl.org</a><br>
-<b>Carondelet Location</b><br>
-401 Holly Hills Avenue<br>
-(314) 353-5190<br>
-<b>Forest Park Southeast Location</b><br>
-4352 Manchester Avenue<br>
-(314) 531-5444<br>
-<h4>Affinia Healthcare</h4>
-(formerly Grace Hill Health Centers)<br>
-<a href="//affiniahealthcare.org/">www.AffiniaHealthcare.org</a><br>
-A number of locations across St. Louis<br>
-(314) 814-8700<br>
-<h4>Myrtle Hilliard Davis Comprehensive Health Centers</h4>
-<a href="//www.mhdchc.org/">www.mhdchc.org</a><br>
-Three locations in St. Louis<br>
-(314) 633-6363<br>
-<h4>Integrated Health Network - Provider Index</h4>
-For a comprehensive list of FQHCs in the St. Louis Region, please visit the Integrated Health Network's Index of Providers, which can be found <a href="//www.stlouisihn.org/index-of-providers">here</a>, or at the web address below.<br>
-http://www.stlouisihn.org/index-of-providers<br>
-<br>
-<h3>Housing Resources</h3>
-<p><h4>Energy Care</h4>
-Energy-related services for the low-income, elderly, ill, disabled, and families with young children in St. Louis City and County.<br>
-<a href="//www.energycare.org/">www.EnergyCare.org</a><br>
-314-733-5900<br></p>
-<p><h4>Homeless Hotline: Housing Resource Center</h4>
-Access to homeless shelters and other housing programs (most facilities require a referral from the housing resource center; start calling at 8 AM if you are looking for a shelter for that night). <br>
-800 N. Tucker Blvd.<br>
-314-802-5444<br>
-Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory.org</a> - a website for shelters and resources in Missouri<br></p>
-<br>
-<h3>Medical Devices and Medication</h3>
-<p><h4>Respectacle</h4>
-Free and reduced cost glasses. Have your prescription ready.<br>
-<a href="//www.respectacle.org/">www.respectacle.org</a><br></p>
-<br>
-<h3>Other Resources</h3>
-<p><h4>American Red Cross - St. Louis Chapter</h4>
-<a href="//www.RedCrossStl.org/">www.RedCrossSTL.org</a><br>
-314-333-JOBS (5627)<br></p>
-<p><h4>Catholic Charities</h4>
-<a href="//www.ccstl.org/">www.ccstl.org</a><br>
-800-318-2596<br></p>
-<h4>National Alliance for Mental Health (NAMI)</h4>
-<a href="//www.nami.org/">www.NAMI.org</a><br>
-800-273-8255<br>
-<br>
-<p><h3>Hotlines</h3>
-<table>
-  <tr>
-    <td>Call for Help - Metro East</td>
-    <td>618-397-0968</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations</td>
-    <td> </td>
-  </tr>
-  <tr>
-    <td>Hunger Hotline</td>
-    <td>314-726-5355</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region</td>
-    <td> </td>
-  </tr>
-  <tr>
-    <td>Mental Health Hotline</td>
-    <td>800-273-TALK (8255)</td>
-  </tr>
-    <tr>
-    <td>GED Hotline</td>
-    <td>800-626-9433</td>
-  </tr>
-    <tr>
-    <td>Women's Safe House</td>
-    <td>314-772-8952</td>
-  </tr>
-    <tr>
-    <td>Youth in Need Hotline</td>
-    <td>636-946-3771</td>
-  </tr>
-</table>
-<br>
-<p>For a comprehensive list of St. Louis community resources, please utilize the “Start Here Resource Directory,” compiled by Inside Dharma.<br>
-<a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">http://www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf</a>
+  <p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic!<br>
+  On this page, you will find websites and contact information for some community resources in the St. Louis region. This is only a subset of the many resources available to our patients; please see the "Start Here Resource Directory" (linked at the bottom of this page) for a more complete list of community organizations, hotlines, and more.</p>
+  <br>
+  <p><h4>United Way/2-1-1 Helps</h4>
+  “If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here.
+  Multilingual services are also available.
+  Your phone call is confidential and free.”<br>
+  <a href="//www.211helps.org/">http://www.211helps.org</a><br>
+  <abbr title="Phone">P:</abbr> (800) 427-4626<br>
+  Or dial 211<br>
+  </p>
+
+  <div class="container">
+    <br><h3>Insurance Assistance</h3>
+    <div class="col-xs-6 col-lg-4">
+      <h4>Affordable Healthcare Act (Obamacare)</h4>
+      <p><a href="//www.Healthcare.gov/">www.Healthcare.gov</a><br>
+      <abbr title="Phone">P:</abbr> (800) 318-2596
+      </p>
+    </div>
+    <div class="col-xs-6 col-lg-4">
+      <h4>Missouri Healthcare Marketplace</h4>
+      Hotline for consumer questions and initiating the process of insurance. This website contains some extra information about the Affordable Care Act, so it might be useful to start here. <br>
+      <a href="//www.enrollmissouri.org/">www.EnrollMissouri.org</a><br>
+      <abbr title="Phone">P:</abbr> (800) 318-2596<br></p>
+    </div>
+    <div class="col-xs-6 col-lg-4">
+      <p><h4>Medicaid</h4>
+      Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
+      <a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
+    </div>
+  </div>
+  <div class="container">
+    <h3>Federally Qualified Health Centers</h3>
+    <p>Federally Qualified Health Centers (FQHCs) are community-based organizations that provide comprehensive primary care and
+      preventive care, including health, oral, and mental health/substance abuse services to persons of all ages, regardless
+      of their ability to pay or health insurance status. FQHCs charge for services on a community board approved sliding-fee
+      scale that is based on patients' family income and size.<p>
+    <div class="col-xs-6 col-lg-3">
+      <h4><a href="//www.fchcstl.org/">Family Care Health Centers</a></h4>
+      <b>Carondelet Location</b><br>
+      401 Holly Hills Avenue<br>
+      <abbr title="Phone">P:</abbr> (314) 353-5190<br>
+      <b>Forest Park Southeast Location</b><br>
+      4352 Manchester Avenue<br>
+      <abbr title="Phone">P:</abbr> (314) 531-5444<br>
+    </div>
+    <div class="col-xs-6 col-lg-3">
+      <h4><a href="//affiniahealthcare.org/">Affinia Healthcare</a></h4>
+      <p><em>formerly Grace Hill Health Centers</em><br>
+      A number of locations across St. Louis<br>
+      <abbr title="Phone">P:</abbr> (314) 814-8700</p>
+    </div>
+    <div class="col-xs-6 col-lg-3">
+      <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
+      Three locations in St. Louis<br>
+      <abbr title="Phone">P:</abbr> (314) 633-6363<br>
+    </div>
+    <div class="col-xs-6 col-lg-3">
+      <h4><a href="//www.stlouisihn.org/index-of-providers">Integrated Health Network - Provider Index</a></h4>
+      The Integrated Health Network's Index of Providers is a comprehensive list of FQHCs in the St. Louis Region.
+    </div>
+  </div>
+  <div class="container">
+    <h3>Housing Resources</h3>
+    <div class="col-xs-12 col-lg-6">
+      <h4><a href="//www.energycare.org/">Energy Care</a></h4>
+      <p>Energy-related services for the low-income, elderly, ill, disabled, and families with young children in St. Louis City and County.</p>
+      <p>314-733-5900</p>
+    </div>
+    <div class="col-xs-12 col-lg-6">
+      <h4>Homeless Hotline: Housing Resource Center</h4>
+      <p>Access to homeless shelters and other housing programs (most facilities require a referral from the housing resource center; start calling at 8 AM if you are looking for a shelter for that night).</p>
+      800 N. Tucker Blvd.<br>
+      <abbr title="Phone">P:</abbr> (314) 802-5444<br>
+      Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory.org</a> - a website for shelters and resources in Missouri
+    </div>
+  </div>
+  <div class="container"/>
+    <h3>Medical Devices and Medication</h3>
+    <div class="col-xs-6 col-lg-4">
+      <h4><a href="//www.respectacle.org/">Respectacle</a></h4>
+      Free and reduced cost glasses. Have your prescription ready.
+    </div>
+  </div>
+  <div class="container">
+    <h3>Other Resources</h3>
+    <div class="col-xs-6 col-lg-4">
+      <h4>American Red Cross - <a href="//www.RedCrossStl.org/">St. Louis Chapter</a></h4>
+      <abbr title="Phone">P:</abbr> (314) 333-JOBS (5627)
+    </div>
+    <div class="col-xs-6 col-lg-4">
+      <h4><a href="//www.ccstl.org/">Catholic Charities</a></h4>
+      <abbr title="Phone">P:</abbr> (800) 318-2596
+    </div>
+    <div class="col-xs-6 col-lg-4">
+      <h4><a href="//www.nami.org/">National Alliance for Mental Health (NAMI)</a></h4>
+      <abbr title="Phone">P:</abbr> (800) 273-8255
+    </div>
+  </div>
+  <div class="container">
+    <h3>Hotlines</h3>
+    <table>
+      <tr>
+        <td>Call for Help - Metro East</td>
+        <td>618-397-0968</td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations</td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>Hunger Hotline</td>
+        <td>314-726-5355</td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region</td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>Mental Health Hotline</td>
+        <td>800-273-TALK (8255)</td>
+      </tr>
+        <tr>
+        <td>GED Hotline</td>
+        <td>800-626-9433</td>
+      </tr>
+        <tr>
+        <td>Women's Safe House</td>
+        <td>314-772-8952</td>
+      </tr>
+        <tr>
+        <td>Youth in Need Hotline</td>
+        <td>636-946-3771</td>
+      </tr>
+    </table>
+  </div>
+  <p>For a comprehensive list of St. Louis community resources, please utilize the <a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">Start Here Resource Directory</a>, compiled by Inside Dharma.<br>
 </div>
 
 
