Update hotlines section with bootstrap features, add lead text class to introduction section. Further changes.

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -5,36 +5,39 @@
 </div>
 
 <div class="container">  
-  <p>Welcome to the Resources page for the Saturday Neighborhood Health Clinic!<br>
-  On this page, you will find websites and contact information for some community resources in the St. Louis region. This is only a subset of the many resources available to our patients; please see the "Start Here Resource Directory" (linked at the bottom of this page) for a more complete list of community organizations, hotlines, and more.</p>
-  <br>
-  <p><h4>United Way/2-1-1 Helps</h4>
-  “If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here.
-  Multilingual services are also available.
-  Your phone call is confidential and free.”<br>
-  <a href="//www.211helps.org/">http://www.211helps.org</a><br>
-  <abbr title="Phone">P:</abbr> (800) 427-4626<br>
-  Or dial 211<br>
-  </p>
+  <p class="lead">
+  On this page, you will find websites and contact information for some community
+  resources in the St. Louis region. This is only a subset of the many resources available to our patients;
+  please see the <a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">Start Here Resource Directory</a>
+  for a more complete list of community organizations, hotlines, and more.</p>
+
+  <div class="container">
+    <h3>General</h3>
+    <div class="col-xs-12 col-lg-6">
+      <h4><a href="//www.211helps.org/">United Way/2-1-1 Helps</a></h4>
+      <p>“If you need help – for anything from day care to rental assistance to counseling to vocational training – your local 2-1-1 is here.
+      Multilingual services are also available.
+      Your phone call is confidential and free.”</p>
+      <abbr title="Phone">P:</abbr> (800) 427-4626, or dial 211
+    </div>
+  </div>
 
   <div class="container">
     <br><h3>Insurance Assistance</h3>
     <div class="col-xs-6 col-lg-4">
-      <h4>Affordable Healthcare Act (Obamacare)</h4>
-      <p><a href="//www.Healthcare.gov/">www.Healthcare.gov</a><br>
+      <h4><a href="//www.Healthcare.gov/">Affordable Healthcare Act</a> ("Obamacare")</h4>
       <abbr title="Phone">P:</abbr> (800) 318-2596
       </p>
     </div>
     <div class="col-xs-6 col-lg-4">
-      <h4>Missouri Healthcare Marketplace</h4>
+      <h4><a href="//www.enrollmissouri.org/">Missouri Healthcare Marketplace</a></h4>
       Hotline for consumer questions and initiating the process of insurance. This website contains some extra information about the Affordable Care Act, so it might be useful to start here. <br>
-      <a href="//www.enrollmissouri.org/">www.EnrollMissouri.org</a><br>
       <abbr title="Phone">P:</abbr> (800) 318-2596<br></p>
     </div>
     <div class="col-xs-6 col-lg-4">
-      <p><h4>Medicaid</h4>
-      Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).<br>
-      <a href="//www.medicaid.gov/">www.Medicaid.gov</a><br></p>
+      <h4><a href="//www.medicaid.gov/">Medicaid</a></h4>
+      <p>Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).
+      </p>
     </div>
   </div>
   <div class="container">
@@ -45,10 +48,10 @@
       scale that is based on patients' family income and size.<p>
     <div class="col-xs-6 col-lg-3">
       <h4><a href="//www.fchcstl.org/">Family Care Health Centers</a></h4>
-      <b>Carondelet Location</b><br>
+      <strong>Carondelet Location</strong><br>
       401 Holly Hills Avenue<br>
       <abbr title="Phone">P:</abbr> (314) 353-5190<br>
-      <b>Forest Park Southeast Location</b><br>
+      <strong>Forest Park Southeast Location</strong><br>
       4352 Manchester Avenue<br>
       <abbr title="Phone">P:</abbr> (314) 531-5444<br>
     </div>
@@ -73,14 +76,14 @@
     <div class="col-xs-12 col-lg-6">
       <h4><a href="//www.energycare.org/">Energy Care</a></h4>
       <p>Energy-related services for the low-income, elderly, ill, disabled, and families with young children in St. Louis City and County.</p>
-      <p>314-733-5900</p>
+      <abbr title="Phone">P:</abbr> 314-733-5900
     </div>
     <div class="col-xs-12 col-lg-6">
       <h4>Homeless Hotline: Housing Resource Center</h4>
       <p>Access to homeless shelters and other housing programs (most facilities require a referral from the housing resource center; start calling at 8 AM if you are looking for a shelter for that night).</p>
       800 N. Tucker Blvd.<br>
       <abbr title="Phone">P:</abbr> (314) 802-5444<br>
-      Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory.org</a> - a website for shelters and resources in Missouri
+      Visit <a href="//www.homelessshelterdirectory.org/">www.HomelessShelterDirectory.org</a> - a website for Missouri shelters and resources 
     </div>
   </div>
   <div class="container"/>
@@ -101,48 +104,42 @@
       <abbr title="Phone">P:</abbr> (800) 318-2596
     </div>
     <div class="col-xs-6 col-lg-4">
-      <h4><a href="//www.nami.org/">National Alliance for Mental Health (NAMI)</a></h4>
+      <h4><a href="//www.nami.org/">National Alliance for Mental Health</a></h4>
       <abbr title="Phone">P:</abbr> (800) 273-8255
     </div>
   </div>
   <div class="container">
     <h3>Hotlines</h3>
-    <table>
-      <tr>
-        <td>Call for Help - Metro East</td>
-        <td>618-397-0968</td>
-      </tr>
-      <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-service agency for crisis situations</td>
-        <td> </td>
-      </tr>
-      <tr>
-        <td>Hunger Hotline</td>
-        <td>314-726-5355</td>
-      </tr>
-      <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comprehensive list of food pantries in the St. Louis region</td>
-        <td> </td>
-      </tr>
-      <tr>
-        <td>Mental Health Hotline</td>
-        <td>800-273-TALK (8255)</td>
-      </tr>
-        <tr>
-        <td>GED Hotline</td>
-        <td>800-626-9433</td>
-      </tr>
-        <tr>
-        <td>Women's Safe House</td>
-        <td>314-772-8952</td>
-      </tr>
-        <tr>
-        <td>Youth in Need Hotline</td>
-        <td>636-946-3771</td>
-      </tr>
-    </table>
-  </div>
-  <p>For a comprehensive list of St. Louis community resources, please utilize the <a href="//www.startherestl.org/uploads/6/8/1/0/6810817/starthere2015_1-52.pdf">Start Here Resource Directory</a>, compiled by Inside Dharma.<br>
+    <div class="row">
+      <div class="col-xs-4 col-lg-3">
+        <strong>Call for Help - Metro East</strong><br>
+        Multi-service agency for crisis situations<br>
+        <abbr title="Phone">P:</abbr> 618-397-0968
+      </div>
+      <div class="col-xs-4 col-lg-3">
+        <strong>Hunger Hotline</strong><br>
+        Comprehensive list of food pantries in the St. Louis region<br>
+        <abbr title="Phone">P:</abbr> 314-726-5355
+      </div>
+      <div class="col-xs-4 col-lg-3">
+        <strong>Mental Health Hotline</strong><br>
+        <abbr title="Phone">P:</abbr> 800-273-TALK (8255)
+      </div>
+      <div class="col-xs-4 col-lg-3">
+        <strong>GED Hotline</strong><br>
+        <abbr title="Phone">P:</abbr> 800-626-9433
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 col-lg-3">
+        <strong>Women's Safe House</strong><br>
+        <abbr title="Phone">P:</abbr> 314-772-8952
+      </div>
+      <div class="col-xs-4 col-lg-3">
+        <strong>Youth in Need Hotline</strong><br>
+        <abbr title="Phone">P:</abbr> 636-946-3771
+      </div>
+    </div>
 </div>
 
 
